docs/apache-airflow-providers-google/8.3.0/_sources/_api/tests/system/providers/google/cloud/cloud_sql/example_cloud_sql/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.cloud_sql.example_cloud_sql`
=========================================================================

.. py:module:: tests.system.providers.google.cloud.cloud_sql.example_cloud_sql

.. autoapi-nested-parse::

   Example Airflow DAG that creates, patches and deletes a Cloud SQL instance, and also
   creates, patches and deletes a database inside the instance, in Google Cloud.

   This DAG relies on the following OS environment variables
   https://airflow.apache.org/concepts.html#variables
   * GCP_PROJECT_ID - Google Cloud project for the Cloud SQL instance.
   * INSTANCE_NAME - Name of the Cloud SQL instance.
   * DB_NAME - Name of the database inside a Cloud SQL instance.



Module Contents
---------------

.. py:data:: ENV_ID
   

   

.. py:data:: PROJECT_ID
   

   

.. py:data:: DAG_ID
   :annotation: = cloudsql

   

.. py:data:: INSTANCE_NAME
   

   

.. py:data:: DB_NAME
   

   

.. py:data:: BUCKET_NAME
   

   

.. py:data:: FILE_NAME
   

   

.. py:data:: FILE_URI
   

   

.. py:data:: FAILOVER_REPLICA_NAME
   

   

.. py:data:: READ_REPLICA_NAME
   

   

.. py:data:: body
   

   

.. py:data:: read_replica_body
   

   

.. py:data:: patch_body
   

   

.. py:data:: export_body
   

   

.. py:data:: import_body
   

   

.. py:data:: db_create_body
   

   

.. py:data:: db_patch_body
   

   

.. py:data:: create_bucket
   

   

.. py:data:: test_run
   

   

